# sdk

./: .gitignore  .gitmodules  .npmrc  README.md  get-version.ps1  get-version.sh  openapitools.json  package-lock.json  package.json  versions.json
.github/: renovate.json
.readme/: api-csharp.md  api-go.md  api-java.md  api-php.md  api-python.md  api-ruby.md  api-typescript.md  ui-android.md  ui-expo.md  ui-flutter.md  ui-react-native.md  ui-swift.md  ui-web.md
api-csharp/: README.md  build-sample.ps1  build-samples.ps1  build-samples.sh  build-sdk.ps1  build-sdk.sh  publish-sdk.ps1  publish-sdk.sh
api-go/: README.md  build-sample.ps1  build-samples.ps1  build-samples.sh  build-sdk.ps1  build-sdk.sh  publish-sdk.ps1  publish-sdk.sh
api-java/: README.md  build-samples.ps1  build-samples.sh  build-sdk.ps1  build-sdk.sh  publish-sdk.ps1  publish-sdk.sh
api-php/: README.md  build-sample.ps1  build-samples.ps1  build-samples.sh  build-sdk.ps1  build-sdk.sh  publish-sdk.ps1  publish-sdk.sh
api-python/: README.md  _setup.py  build-sample.ps1  build-samples.ps1  build-samples.sh  build-sdk.ps1  build-sdk.sh  publish-sdk.ps1  publish-sdk.sh
api-ruby/: README.md  build-sample.ps1  build-samples.ps1  build-samples.sh  build-sdk.ps1  build-sdk.sh  publish-sdk.ps1  publish-sdk.sh
api-typescript/: README.md  build-sample.ps1  build-samples.ps1  build-samples.sh  build-sdk.ps1  build-sdk.sh  publish-sdk.ps1  publish-sdk.sh
backend/: csharp.ps1  generate-client.ps1  get-version.ps1  go.ps1  java.ps1  node.ps1  openapitools.json  php.ps1  python.ps1  ruby.ps1
helpers/: common.sh  generate-client.ps1  generate-client.sh  php-copy-web-ui.ps1  submodule.ps1  submodule.sh
publish/: android.ps1  flutter.ps1  go.ps1  java.ps1  maven.ps1  (+6 more)
service-results/python/: README.md  __init__.py  exchange_result_request.py  pyproject.toml  result_exchanger.py  result_processor.py
(+698 files in other folders)
