[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "trinsic-service-results"
version = "1.0.0"
description = "ServiceResults project for standardized result handling in Trinsic SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Trinsic ID", email = "support@trinsic.id"}
]
keywords = ["trinsic", "verification", "identity", "results", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/trinsic-id/sdk"
Documentation = "https://docs.trinsic.id"
Repository = "https://github.com/trinsic-id/sdk"
"Bug Tracker" = "https://github.com/trinsic-id/sdk/issues"

[tool.setuptools]
packages = ["trinsic_service_results"]
package-dir = {"trinsic_service_results" = "."}

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true